--- a/Labs/Properties/Resources.resx
+++ b/Labs/Properties/Resources.resx
@@ -127,10 +127,25 @@
   <data name="operation" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Screenshot_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="orderedDistribution" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\orderedDistribution.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="orderedDistributionRep" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\.orderedDistributionRep.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="permutation" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\permutation.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="symetricDifference" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\symetricDifference.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="union" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\union.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="unorderedDistribution" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\unorderedDistribution.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="unorderedDistributionRep" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\unorderedDistributionRep.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
